ci/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressways-${CICD_GIT_BRANCH}
  labels:
    app: expressways-${CICD_GIT_BRANCH}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expressways-${CICD_GIT_BRANCH}
  template:
    metadata:
      labels:
        app: expressways-${CICD_GIT_BRANCH}
    spec:    
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
        - name: expressways-application
          image: ${CICD_REGISTRY}/expressways:${CICD_EXECUTION_SEQUENCE}
          command: ['/data/docker-entrypoint.sh']
          workingDir: /data
        - name: expressways-worker
          image: ${CICD_REGISTRY}/expressways:${CICD_EXECUTION_SEQUENCE}
          command: ['/data/docker-worker-entrypoint.sh']
          workingDir: /data
        - name: expressways-flower
          image: ${CICD_REGISTRY}/expressways:${CICD_EXECUTION_SEQUENCE}
          command: ['/data/docker-flower-entrypoint.sh']
          workingDir: /data
        - name: queue
          image: redis:5
        - name: expressways-proxy
          image: nginx:alpine 
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static
              mountPath: /static
            - name: media
              mountPath: /media
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: static
          emptyDir: {}
        - name: media 
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx
