ci/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true" # optional
    rancher.io/globalDNS.hostname: "expressways.${CICD_GIT_BRANCH}.apps.wsp-lattice.io"
  name: expressways-${CICD_GIT_BRANCH}-ingress
spec:
  rules:
  - host: expressways.${CICD_GIT_BRANCH}.apps.wsp-lattice.io
    http:
      paths:
      - path: /
        backend:
          serviceName: expressways-${CICD_GIT_BRANCH}-service
          servicePort: 80
  tls:
  - hosts:
    -  expressways.${CICD_GIT_BRANCH}.apps.wsp-lattice.io
    secretName: expressways-${CICD_GIT_BRANCH}-cert
